--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.wany.amethy.terminal</groupId>
+  <groupId>io.wany.amethy.terminal.bukkit</groupId>
   <artifactId>Amethy-Terminal</artifactId>
   <version>1.0.0</version>
 
