--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
+/.idea
+*.iml
 /target
 /dependency-reduced-pom.xml
-/.vscode
-/amerep
-/repository
-/packages-bot/node_modules
-/packages-bot/package-lock.json
-/packages-bot/config.json
-/packages
-/test
+/amerep-bot/node_modules
+/amerep-bot/config/config.json
