--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
     </repository>
 
+    <!-- repo:papermc -->
+    <repository>
+      <id>papermc</id>
+      <url>https://repo.papermc.io/repository/maven-public/</url>
+    </repository>
+
+
   </repositories>
 
   <dependencies>
@@ -43,14 +50,22 @@
     <dependency>
       <groupId>io.wany.amethyst</groupId>
       <artifactId>Amethyst</artifactId>
-      <version>0.8.2</version>
+      <version>0.8.6</version>
     </dependency>
 
     <!-- Spigot (repo:spigot) -->
-    <dependency>
+    <!--dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
       <version>1.14-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency-->
+
+    <!-- paper (repo:papermc) -->
+    <dependency>
+      <groupId>io.papermc.paper</groupId>
+      <artifactId>paper-api</artifactId>
+      <version>1.19.3-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
@@ -76,6 +91,26 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- Adventure API (repo:mavencentral) -->
+    <dependency>
+      <groupId>net.kyori</groupId>
+      <artifactId>adventure-api</artifactId>
+      <version>4.13.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.kyori</groupId>
+      <artifactId>adventure-text-serializer-gson</artifactId>
+      <version>4.13.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.kyori</groupId>
+      <artifactId>adventure-text-serializer-legacy</artifactId>
+      <version>4.13.0</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -86,7 +121,7 @@
 
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.1</version>
 
         <executions>
 
@@ -115,12 +150,10 @@
 
           <relocations>
 
+            <!-- Amethyst -->
             <relocation>
               <pattern>io.wany.amethyst</pattern>
-            </relocation>
-
-            <relocation>
-              <pattern>net.kyori.adventure</pattern>
+              <shadedPattern>io.wany.relocated.io.wany.amethyst</shadedPattern>
             </relocation>
 
           </relocations>
