--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -27,10 +27,5 @@ loadbefore:
 commands:
   amethyterminal:
     permission: amethy.terminal.command.amethyterminal
-    usage: 'Usage: /<command> (version|reload|debug|update|updater)'
+    usage: '/<command> (version|reload|debug|update|updater)'
     aliases: [at, aterm]
-
-  plugins:
-    description: Gets a list of plugins running on the server
-    usage: '/plugins'
-    aliases: [ pl ]
