--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,14 @@
         </configuration>
 
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>14</source>
+                <target>14</target>
+            </configuration>
+        </plugin>
 
     </plugins>
 
