--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Amethy-Terminal
 version: 1.0.1
 main: io.wany.amethy.terminal.bukkit.AmethyTerminal
 
-description: Amethy Terminal Node Plugin for Bukkit Servers. Provides remote terminal for Minecraft servers in web.
+description: Amethy terminal node plugin for bukkit servers. Provides remote terminal for minecraft servers in web.
 author: Wany
 website: https://amethy.wany.io
 
