--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <version>1.0.1-dev</version>
 
   <name>Amethy-Terminal-Bukkit</name>
-  <url>https://amethy.wany.io</url>
+  <url>https://amethy.wany.io/terminal</url>
 
   <properties>
 
