--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.wany.amethy.terminal.bukkit</groupId>
-  <artifactId>Amethy-Terminal</artifactId>
-  <version>1.0.1-dev</version>
+  <artifactId>Amethy-Terminal-Bukkit</artifactId>
+  <version>1.0.2-dev</version>
 
   <name>Amethy-Terminal-Bukkit</name>
   <url>https://amethy.wany.io/terminal</url>
